final changes